# cif2pdb

./: README.md  input_model_0.cif  pyproject.toml  requirements.txt
app/: converter.py  main.py
tests/: test_app.py
