[project]
name = "cif2pdb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pymol-open-source>=3.2.0a0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
